--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <html>
   <body>
-    <h1>Exploring the DOM<h1>
+    <h1>Exploring the DOM</h1>
 
     <h2>Count Down: <span id="count">20</span><h2>
     <button onclick="updateCount()">Next</button>
 
     <script>
-      var i =1;
+      var i = 20;
 
       function updateCount() {
-        i = i - 1
+        i = i - 1;
         countjob = document.getElementByID("count");
         console.log("Updating object: " + countobj);
-        countjob.innerHTML = "<b>" + i = ",/b>";
+        countjob.innerHTML = "<b>" + i = "</b>";
 
 	}
 	</script>
