--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <body>
     <h1>Exploring the DOM</h1>
 
-    <h2>Count Down: <span id="count">20</span><h2>
+    <h2>Count Down: <span id="count">20</span></h2>
     <button onclick="updateCount()">Next</button>
 
     <script>
