--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
+
 <html>
-  <body>
+<body>
     <h1>Exploring the DOM</h1>
 
     <h2>Count Down: <span id="count">20</span></h2>
     <button onclick="updateCount()">Next</button>
 
     <script>
-      var i = 20;
+        var i = 20;
 
-      function updateCount() {
-        i = i - 1;
-        countjob = document.getElementByID("count");
-        console.log("Updating object: " + countobj);
-        countjob.innerHTML = "<b>" + i = "</b>";
-
-	}
-	</script>
+        function updateCount() {
+            i = i - 1;
+            countobj = document.getElementById("count");
+            console.log("Updating object: " + countobj);
+            countobj.innerHTML = "<b>" + i + "</b>";
+        }
+    </script>
 </body>
 </html>
