--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             console.log("Updating object: " + countobj);
             countobj.innerHTML = "<b>" + i + "</b>";
         
-            if (i <= 0) { // double "==" is equality comparison
+            if (i = 0) { // double "==" is equality comparison
                 countobj.innerHTML = "<b><font size='+5'>BOOM!</b>";
             }
         
