--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
-
 <html>
 <body>
     <h1>Exploring the DOM</h1>
+
+    <h2>Count Down: <span id="count">20</span></h2>
+    <button onclick="updateCount()">Next</button>
 
     <script>
         var i = 20;
@@ -11,10 +13,7 @@
             countobj = document.getElementById("count");
             console.log("Updating object: " + countobj);
             countobj.innerHTML = "<b>" + i + "</b>";
-         
         }
-       
     </script>
-   
 </body>
 </html>
