--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <head>
     <style>
         body {
-            transition: background-color 0.5s ease; /* Add transition effect to smoothly change background color */
+            transition: background-color 0.5s ease; 
+            <script src="https://cdn.jsdelivr.net/npm/confetti-js"></script> 
         }
         </style>
-        <script src="https://cdn.jsdelivr.net/npm/confetti-js"></script> </style>
-
+       
 </head>
  <body>
     <h1>Exploring the DOM</h1>
