--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 particleCount: 100,
                 spread: 70,
                 origin: { y: 0.6 }
+                colors: ['#FFFFFF'] 
             });
         }
      </script>
