--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 particleCount: 100,
                 spread: 70,
                 origin: { y: 0.6 },
-                colors: ['#FFFFFF'] // Note the comma here
+                colors: ['#FFFFFF'] 
             });
         }
     </script>
