--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             if (i === 0) {
                 countobj.innerHTML = "<b><font size='+5'>BOOM!</font></b>";
-                countobj.innerHTML = explodeConfetti();
+                explodeConfetti();
             }
 
             var redness = (20 - i) * (255 / 20); // Gradually change color as count approaches 0
