--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h2>Count Down: <span id="count">20</span></h2>
     <button onclick="updateCount()">Next</button>
 
-    <script src="https://cdn.jsdelivr.net/npm/confetti-js"></script>
+    <script src="https://https://cdn.jsdelivr.net/npm/js-confetti@latest/></script>
     
     <script>
         var i = 20;
