--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 explodeConfetti();
             }
 
-            var redness = (20 - i) * (255 / 20); // Gradually change color as count approaches 0
+            var redness = (20 - i) * (255 / 20);
             document.body.style.backgroundColor = "rgb(" + redness + ", 0, 0)"; 
         }
 
