--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h2>Count Down: <span id="count">20</span></h2>
     <button onclick="updateCount()">Next</button>
 
-    <script src="https://https://cdn.jsdelivr.net/npm/js-confetti@latest/></script>
+    <script src="https://cdn.jsdelivr.net/npm/confetti-js"></script>
     
     <script>
         var i = 20;
@@ -28,7 +28,7 @@
                 explodeConfetti();
             }
 
-            var redness = (20 - i) * (255 / 20);
+            var redness = (20 - i) * (255 / 20); // Gradually change color as count approaches 0
             document.body.style.backgroundColor = "rgb(" + redness + ", 0, 0)"; 
         }
 
